--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -22,6 +22,7 @@
         </header>
         <div class="wrapper">
             <div class="wrapper-item">
+                <input type="checkbox" class="delete-checkbox">
                 <p>JVC200123</p>
                 <p>Acme DISC</p>
                 <p>1.00$</p>
